--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "get-random-values": "^1.2.0"
   }
